KUDU-2848: fetch HMS DB UUID in the background

To avoid having a hard startup dependency from Kudu to HMS, let's thunk the
work of fetching the DB UUID to a helper thread. It's a simple approach, but
admittedly I haven't given much thought to whether it preserves reasonable
semantics for clients.

The new test isn't useful because our HMS test artifact doesn't support DB
UUIDs. I'll make sure this gets proper testing after merging though.

Change-Id: I5d190d317b3ee3e69493638e866949cef8fb5d46
Reviewed-on: http://gerrit.cloudera.org:8080/13594
Tested-by: Kudu Jenkins
Reviewed-by: Grant Henke <granthenke@apache.org>